# howdy

./: README.md
howdy/src/: compare.py
howdy/src/cli/: add.py  clear.py  config.py  disable.py  list.py  remove.py  set.py  snap.py  test.py
howdy/src/pam/: main.cc  meson.build  meson_options.txt
howdyd/: howdyd  meson.build
howdyd/dbus/: nl.boltgolt.Howdy.Device.xml  nl.boltgolt.Howdy.Manager.xml  nl.boltgolt.Howdy.Scan.xml  nl.boltgolt.Howdy.conf  nl.boltgolt.Howdy.service
howdyd/package/: __init__.py  caller.py  device.py  error.py  manager.py  models.py  scan.py
howdyd/polkit/: nl.boltgolt.Howdy.policy.in
howdyd/systemd/: howdyd.service
